# Replit-projesi

./: .env.example  .gitignore  .replit  .security_key  BTC_COMMAND_README.md  DEEP_RESEARCH_GUIDE.md  FINAL_100_SYSTEM.md  FINAL_SUMMARY.md  GLOBAL_MARKETS_GUIDE.md  KULLANIM.txt  LICENSE  LIMITASYONLAR.md  QUICK_START.txt  README.md  SISTEM_ANALIZI.md  SYSTEM_FINAL.md  TELEGRAM_COMMANDS.md  TELEGRAM_SETUP.md  TOKEN_BEKLENIYOR.md  YENI_OZELLIKLER.md  accuracy_calculator.py  ada_prediction_tracker.py  ada_tracking_data.json  advanced_ai.py  advanced_backtest.py  advanced_candlestick_analysis.py  advanced_indicators.py  advanced_ml_analyzer.py  advanced_price_action.py  advanced_sentiment_analyzer.py  advanced_technical.py  advanced_web_scraper.py  advanced_whale_tracker.py  ai_news_analyzer.py  alpaca_broker.py  alpaca_broker_real.py  analysis_results.json  api_manager.py  app.py  app_backup.py  (+157 more)
data/: predictions.json
src/analysis/: __init__.py  btcturk_ohlcv.py  composite_signal.py  market_data.py  pattern_detector.py  prediction_tracker.py
src/telegram/: btc_analyzer.py  message_formatter.py
src/utils/: telegram_sender.py
static/: advanced_dashboard.html  dashboard.html  index.html
templates/: dashboard.html
